--- a/PizzaDev/package.json
+++ b/PizzaDev/package.json
@@ -1,7 +1,6 @@
 {
   "name": "pizzadev",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node app",
@@ -11,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
-    "mysql2": "^3.3.4",
-    "nodemon": "^2.0.22"
-  }
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.5",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.10.0"
+  },
+  "keywords": [],
+  "description": ""
 }
