--- a/lib/.env.example
+++ b/lib/.env.example
@@ -3,3 +3,5 @@ SECRET_KEY=123123
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=password
+
+#CRIAR UM ARQUIVO DENTRO DA PASTA lib CHAMADO .env SEGUINDO ESSE COMO EXEMPLO, SO TROCANDO OS VALORES
